# pos_basestation_updater

./: BaseStation_Updater_en_GB.ts  CMakeLists.txt  config.json  updater.cpp  updater.h  updater.ui
.github/workflows/: cmake.yml
src/: cli.cpp  logger.cpp  logger.h  main.cpp  main.h  version.cpp  version.h
test/: latest.php  testing.cpp
